Add javascript behaviour and tests

--- a/src/govuk/components/checkboxes/checkboxes.yaml
+++ b/src/govuk/components/checkboxes/checkboxes.yaml
@@ -73,7 +73,7 @@ params:
   - name: divider
     type: string
     required: false
-    description: Divider text to separate checkbox items, for example the text "or".      
+    description: Divider text to separate checkbox items, for example the text "or".
   - name: checked
     type: boolean
     required: false
@@ -144,6 +144,32 @@ examples:
         text: Waste from mines or quarries
       - value: farm
         text: Farm or agricultural waste
+      - divider: or
+      - value: none
+        text: None of these
+        behaviour: exclusive
+
+- name: with divider, None and conditional items
+  data:
+    name: with-divider-and-none-and-conditional-items
+    fieldset:
+      legend:
+        text: Do you have any access needs?
+        classes: govuk-fieldset__legend--l
+        isPageHeading: true
+    items:
+      - value: accessible-toilets
+        text: Accessible toilets available
+      - value: braille
+        text: Braille translation service available
+      - value: disabled-car-parking
+        text: Disabled car parking available
+      - value: another-access-need
+        text: Another access need
+        conditional:
+          html: |
+            <label class="govuk-label" for="other-access-needs">Other access needs</label>
+            <textarea class="govuk-textarea govuk-!-width-one-third" name="other-access-needs" id="other-access-needs"></textarea>
       - divider: or
       - value: none
         text: None of these
