Fix style guide issues across macros content

--- a/src/govuk/components/footer/footer.yaml
+++ b/src/govuk/components/footer/footer.yaml
@@ -7,7 +7,7 @@ params:
   - name: visuallyHiddenTitle
     type: string
     required: false
-    description: Title for a meta item section, which defaults to Support links
+    description: Title for a meta item section. Defaults to 'Support links'.
   - name: html
     type: string
     required: false
@@ -41,7 +41,7 @@ params:
   - name: title
     type: string
     required: true
-    description: Title for a section
+    description: Title for a section.
   - name: columns
     type: integer
     required: false
