--- a/src/govuk/components/hint/hint.yaml
+++ b/src/govuk/components/hint/hint.yaml
@@ -10,7 +10,7 @@ params:
 - name: id
   type: string
   required: false
-  description: Optional id attribute to add to the hint span tag.
+  description: Optional ID attribute to add to the hint span tag.
 - name: classes
   type: string
   required: false
