--- a/src/govuk/components/inset-text/inset-text.yaml
+++ b/src/govuk/components/inset-text/inset-text.yaml
@@ -10,7 +10,7 @@ params:
 - name: id
   type: string
   required: false
-  description: Id attribute to add to the inset text container.
+  description: ID attribute to add to the inset text container.
 - name: classes
   type: string
   required: false
