--- a/src/govuk/components/label/label.yaml
+++ b/src/govuk/components/label/label.yaml
@@ -10,7 +10,7 @@ params:
 - name: for
   type: string
   required: false
-  description: The value of the for attribute, the id of the input the label is associated with.
+  description: The value of the `for` attribute, the ID of the input the label is associated with.
 - name: isPageHeading
   type: boolean
   required: false
