--- a/src/govuk/components/panel/panel.yaml
+++ b/src/govuk/components/panel/panel.yaml
@@ -10,7 +10,7 @@ params:
 - name: headingLevel
   type: integer
   required: false
-  description: Heading level, from 1 to 6. Default is 1.
+  description: Heading level, from `1` to `6`. Default is `1`.
 - name: text
   type: string
   required: true
