--- a/src/govuk/components/file-upload/file-upload.yaml
+++ b/src/govuk/components/file-upload/file-upload.yaml
@@ -6,11 +6,11 @@ params:
 - name: id
   type: string
   required: true
-  description: The id of the input
+  description: The ID of the input.
 - name: value
   type: string
   required: false
-  description: Optional initial value of the input
+  description: Optional initial value of the input.
 - name: describedBy
   type: string
   required: false
@@ -33,12 +33,12 @@ params:
 - name: formGroup
   type: object
   required: false
-  description: Options for the form-group wrapper
+  description: Options for the form-group wrapper.
   params:
   - name: classes
     type: string
     required: false
-    description: Classes to add to the form group (for example to show error state for the whole group)
+    description: Classes to add to the form group (for example to show error state for the whole group).
 - name: classes
   type: string
   required: false
