--- a/src/govuk/components/input/input.yaml
+++ b/src/govuk/components/input/input.yaml
@@ -2,7 +2,7 @@ params:
 - name: id
   type: string
   required: true
-  description: The id of the input.
+  description: The ID of the input.
 - name: name
   type: string
   required: true
@@ -10,7 +10,7 @@ params:
 - name: type
   type: string
   required: false
-  description: Type of input control to render. Defaults to "text".
+  description: Type of input control to render. Defaults to `text`.
 - name: inputmode
   type: string
   required: false
@@ -67,11 +67,11 @@ params:
     - name: text
       type: string
       required: true
-      description: Required. If `html` is set, this is not required. Text to use within the label. If `html` is provided, the `text` argument will be ignored.
+      description: If `html` is set, this is not required. Text to use within the label. If `html` is provided, the `text` argument will be ignored.
     - name: html
       type: string
       required: true
-      description: Required. If `text` is set, this is not required. HTML to use within the label. If `html` is provided, the `text` argument will be ignored.
+      description: If `text` is set, this is not required. HTML to use within the label. If `html` is provided, the `text` argument will be ignored.
     - name: classes
       type: string
       required: false
@@ -83,12 +83,12 @@ params:
 - name: formGroup
   type: object
   required: false
-  description: Options for the form-group wrapper
+  description: Options for the form-group wrapper.
   params:
   - name: classes
     type: string
     required: false
-    description: Classes to add to the form group (for example to show error state for the whole group)
+    description: Classes to add to the form group (for example to show error state for the whole group).
 - name: classes
   type: string
   required: false
@@ -104,7 +104,7 @@ params:
 - name: spellcheck
   type: boolean
   required: false
-  description: Optional field to enable or disable the spellcheck attribute on the input.
+  description: Optional field to enable or disable the `spellcheck` attribute on the input.
 - name: attributes
   type: object
   required: false
