--- a/src/govuk/components/summary-list/summary-list.yaml
+++ b/src/govuk/components/summary-list/summary-list.yaml
@@ -396,7 +396,7 @@ examples:
               - href: '#'
                 text: Point
               - href: '#'
-                text: Coom
+                text: Zoom
               - href: '#'
                 text: Press
               - href: '#'
