Add local testing view
Add additional development testing views to see, in situ, more edge case uses of the Accordion - including a longer header and summary text with longer Content (using Lorem Ipsum) and common HTML phrasing content[1][2]  like <sup>, <abbr> and <span> (This is not extensive)

- Also add visible summary element to note that is is wrapped in a <span>

[1] https://www.w3.org/TR/2011/WD-html5-20110525/content-models.html#phrasing-content-0

[2]https://html.spec.whatwg.org/multipage/dom.html#phrasing-content-2

--- a/src/govuk/components/accordion/accordion.yaml
+++ b/src/govuk/components/accordion/accordion.yaml
@@ -85,7 +85,30 @@ examples:
       - heading:
          text: Test 2
         summary:
-          html: <span class="govuk-!-font-weight-regular">Additional description</span>
+          html: <span class="govuk-!-font-weight-regular">Additional description (wrapped in span)</span>
+        content:
+          html: |
+            <ul class="govuk-list govuk-list--bullet">
+              <li>Example item 2</li>
+            </ul>
+
+- name: with additional Content & descriptions
+  data:
+    id: with-descriptions-and-longer-content
+    items:
+      - heading:
+          text: Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc quis tortor porttitor.
+        summary:
+          text: Etiam diam dui, tempus ut pharetra in, aliquet non dui. Nunc pulvinar maximus tortor, ac finibus augue congue vitae. Donec sed cursus lorem.
+        content:
+          html: |
+            <ul class="govuk-list govuk-list--bullet">
+              <li>Example item 1</li>
+            </ul>
+      - heading:
+         text: Praesent faucibus leo feugiat libero pharetra lacinia. Aliquam aliquet ante vitae mollis vestibulum. 
+        summary:
+          html: <span class="govuk-!-font-weight-regular">Maecenas nec <abbr>est</abbr> sapien<sup>1</sup>. Etiam varius luctus mauris non porttitor. </span>
         content:
           html: |
             <ul class="govuk-list govuk-list--bullet">
