--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "name": "govuk-frontend-repository",
   "description": "Used only for the development of GOV.UK Frontend, see `package/package.json` for the published `package.json`",
   "engines": {
-    "node": "14.17.0"
+    "node": "~14.17.6"
   },
   "license": "MIT",
   "scripts": {
