--- a/src/govuk/components/accordion/accordion.yaml
+++ b/src/govuk/components/accordion/accordion.yaml
@@ -58,9 +58,9 @@ examples:
           text: Section A
         content:
           html: |
-            <ul class="govuk-list govuk-list--bullet">
-              <li>Example item 1</li>
-            </ul>
+            <p class="govuk-body">
+              We need to know your nationality so we can work out which elections you’re entitled to vote in. If you cannot provide your nationality, you’ll have to send copies of identity documents through the post.
+            </p>
       - heading:
           text: Section B
         content:
@@ -79,6 +79,9 @@ examples:
           text: Additional description
         content:
           html: |
+            <p class="govuk-body">
+              We need to know your nationality so we can work out which elections you’re entitled to vote in. If you cannot provide your nationality, you’ll have to send copies of identity documents through the post.
+            </p>
             <ul class="govuk-list govuk-list--bullet">
               <li>Example item 1</li>
             </ul>
@@ -106,9 +109,9 @@ examples:
               <li>Example item 1</li>
             </ul>
       - heading:
-         text: Praesent faucibus leo feugiat libero pharetra lacinia. Aliquam aliquet ante vitae mollis vestibulum. 
+         text: Praesent faucibus leo feugiat libero pharetra lacinia. Aliquam aliquet ante vitae mollis vestibulum.
         summary:
-          html: <span class="govuk-!-font-weight-regular">Maecenas nec <abbr>est</abbr> sapien<sup>1</sup>. Etiam varius luctus mauris non porttitor. </span>
+          html: <span class="govuk-!-font-weight-regular">Maecenas nec <abbr>est</abbr> sapien. Etiam varius luctus mauris non porttitor. </span>
         content:
           html: |
             <ul class="govuk-list govuk-list--bullet">
