Minor tidy up, aligment with Design System conventions
In `index.scss`:
- Remove `top-border` rule from button as this is already set on `section-heading`.
- Remove `govuk-em` for spacing as we tend to set spacing in pixels.
- Remove variable definitions when the variable is only used once.
- Only set `padding-top`, not all padding properties, for `.govuk-accordion__section` as it was the only one initially set.
- Restore `.govuk-accordion__section-content` and `.govuk-accordion__section--expanded .govuk-accordion__section-content` to the top of the file to make the PR easier to review (we could open another PR to do some wider refactoring of the file if we felt that was useful).
- Remove redundant `position: relative`
- Add a couple of code comments.

In `campaign-page/index.njk`:
- Remove unintended punctuation changes.

--- a/src/govuk/components/accordion/accordion.yaml
+++ b/src/govuk/components/accordion/accordion.yaml
@@ -92,9 +92,9 @@ examples:
               <li>Example item 2</li>
             </ul>
 
-- name: with additional Content & descriptions
+- name: with long content and description
   data:
-    id: with-descriptions-and-longer-content
+    id: with-long-content-and-description
     items:
       - heading:
           text: Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc quis tortor porttitor.
