--- a/src/govuk/components/pagination/pagination.yaml
+++ b/src/govuk/components/pagination/pagination.yaml
@@ -31,6 +31,26 @@ examples:
       selected: true
     - text: '3'
       href: '/page=3'
+- name: with a different type of results
+  data:
+    results:
+      from: 20
+      to: 40
+      count: 60
+      type: 'team members'
+    previous:
+      text: 'Previous page'
+      href: '/page=1'
+    next:
+      text: 'Next page'
+      href: '/page=3'
+    items:
+    - text: '1'
+      href: '/page=1'
+    - text: '2'
+      selected: true
+    - text: '3'
+      href: '/page=3'
 - name: with first and last pages
   data:
     results:
