--- a/src/govuk/components/pagination/pagination.yaml
+++ b/src/govuk/components/pagination/pagination.yaml
@@ -1,17 +1,72 @@
 examples:
 - name: default
   data:
+    previous:
+      text: 'Previous page'
+      href: '/page=1'
+    next:
+      text: 'Next page'
+      href: '/page=3'
+    items:
+    - text: '1'
+      href: '/page=1'
+    - text: '2'
+      selected: true
+    - text: '3'
+      href: '/page=3'
+- name: with many pages
+  data:
+    results:
+      from: 1000
+      to: 1050
+      count: 2000
+    previous:
+      text: 'Previous page'
+      href: '/page=9'
+    next:
+      text: 'Next page'
+      href: '/page=11'
+    items:
+    - text: '1'
+      href: '/page=1'
+    - type: 'dots'
+    - text: '8'
+      href: '/page=8'
+    - text: '9'
+      href: '/page=9'
+    - text: '10'
+      selected: true
+    - text: '11'
+      href: '/page=11'
+    - text: '12'
+      href: '/page=12'
+    - type: 'dots'
+    - text: '40'
+      href: '/page=40'
+- name: first page
+  data:
     next:
       text: 'Next page'
       href: '/page=2'
     items:
     - text: '1'
-      href: '/page=1'
       selected: true
     - text: '2'
       href: '/page=2'
     - text: '3'
       href: '/page=3'
+- name: last page
+  data:
+    previous:
+      text: 'Previous page'
+      href: '/page=1'
+    items:
+    - text: '1'
+      href: '/page=1'
+    - text: '2'
+      href: '/page=2'
+    - text: '3'
+      selected: true
 - name: with results
   data:
     results:
@@ -51,32 +106,3 @@ examples:
       selected: true
     - text: '3'
       href: '/page=3'
-- name: with first and last pages
-  data:
-    results:
-      from: 1000
-      to: 1050
-      count: 2000
-    previous:
-      text: 'Previous page'
-      href: '/page=9'
-    next:
-      text: 'Next page'
-      href: '/page=11'
-    items:
-    - text: '1'
-      href: '/page=1'
-    - type: 'dots'
-    - text: '8'
-      href: '/page=8'
-    - text: '9'
-      href: '/page=9'
-    - text: '10'
-      selected: true
-    - text: '11'
-      href: '/page=11'
-    - text: '12'
-      href: '/page=12'
-    - type: 'dots'
-    - text: '40'
-      href: '/page=40'
