--- a/src/govuk/components/pagination/pagination.yaml
+++ b/src/govuk/components/pagination/pagination.yaml
@@ -1,3 +1,77 @@
+params:
+- name: classes
+  type: string
+  required: false
+  description: The classes that you want to add to the pagination.
+- name: previous
+  type: object
+  required: false
+  description: A link to the previous page, if there is one.
+  params:
+  - name: text
+    type: string
+    required: false
+    description: The previous page link text.
+  - name: href
+    type: string
+    required: false
+    description: The previous page URL.
+- name: next
+  type: object
+  required: false
+  description: A link to the next page, if there is one.
+  params:
+  - name: text
+    type: string
+    required: false
+    description: The next page link text.
+  - name: href
+    type: string
+    required: false
+    description: The next page URL.
+- name: items
+  type: array
+  required: true
+  description: Array of link objects.
+  params:
+  - name: type
+    type: string
+    required: false
+    description: Set to 'dots' to add elipses.
+  - name: selected
+    type: boolean
+    required: false
+    description: Set to 'dots' to add elipses.
+  - name: text
+    type: string
+    required: false
+    description: The link text - usually a page number.
+  - name: href
+    type: string
+    required: false
+    description: The link URL.
+- name: results
+  type: object
+  required: false
+  description: Array of link objects.
+  params:
+  - name: from
+    type: string
+    required: true
+    description: Number of first result on page.
+  - name: to
+    type: string
+    required: true
+    description: Number of last result on page.
+  - name: count
+    type: string
+    required: true
+    description: Total number of results.
+  - name: type
+    type: string
+    required: false
+    description: The type of result. Defaults to 'results'.
+
 examples:
 - name: default
   data:
